<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appTheme"
    android:clickable="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/aut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="400dp"
        android:layout_marginRight="400dp"
        android:layout_marginBottom="8dp"
        android:text="@string/AUT"
        android:textColor="@android:color/white"
        android:textSize="180sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toTopOf="@+id/university"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/university"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/university"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="430dp"
        android:text="@string/UNIVERSITY"
        android:textColor="@android:color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aut"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/chatbot"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:onClick="chatbotActivity"
        android:text="@string/CHATBOT"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toStartOf="@+id/services"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/university" />

    <Button
        android:id="@+id/services"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:onClick="servicesActivity"
        android:text="@string/SERVICES"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chatbot"
        app:layout_constraintTop_toBottomOf="@+id/university" />

    <Button
        android:id="@+id/map"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:onClick="MapActivity"
        android:text="@string/MAP"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/courses"
        app:layout_constraintEnd_toStartOf="@+id/calendar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chatbot" />

    <Button
        android:id="@+id/calendar"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:onClick="CalendarActivity"
        android:text="@string/CALENDAR"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/map"
        app:layout_constraintTop_toBottomOf="@+id/services" />

    <Button
        android:id="@+id/courses"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:onClick="coursesActivity"
        android:text="@string/COURSES"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/help"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <Button
        android:id="@+id/help"
        android:layout_width="133dp"
        android:layout_height="70dp"
        android:onClick="helpActivity"
        android:text="@string/HELP"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/courses"
        app:layout_constraintTop_toBottomOf="@+id/calendar" />
</androidx.constraintlayout.widget.ConstraintLayout>